# ccswitch-deeplink-exporter

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
