[package]
name = "ccswitch-deeplink-exporter"
version = "0.2.0"
edition = "2021"
description = "CC Switch Deeplink Exporter"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
dirs = "5"
urlencoding = "2"
